DOC-1623: Fixed the distraction-free demo not resizing on smaller screens

--- a/modules/ROOT/examples/live-demos/editor-dfree/style.css
+++ b/modules/ROOT/examples/live-demos/editor-dfree/style.css
@@ -1,6 +1,5 @@
 .demo-dfree {
   position: relative;
-  width: 690px;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.2);
   text-align: left;
   color: #626262;
